# tdf-product-artifact-builder

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
project_control/: CLAIM_BOUNDARIES.md  COMPLETED_WORK.md  CURSOR_FEEDBACK_LOG.md  DECISION_LOG.md  ENGINE_PRODUCT_SEPARATION.md  PRODUCTIZATION_STRATEGY.md  PRODUCT_READINESS_LADDER.md  PROJECT_CHARTER.md  RELEASE_CHAIN_STATUS.md  REVIEW_BUNDLE_REQUIREMENTS.md  ROADMAP.md
schemas/: diagnostic_evidence.schema.json  evidence_acceptance_report.schema.json  evidence_ingestion_manifest.schema.json  evidence_manifest.schema.json  evidence_rejection_report.schema.json  product_report.schema.json  product_spec.schema.json  release_authorization_report.schema.json  release_readiness_report.schema.json  review_summary.schema.json  reviewer_manifest.schema.json  tdf_openmm_validation_evidence.schema.json
tests/: conftest.py  test_build_reviewer_package_tool.py  test_ci_workflow_exists.py  test_claim_boundaries.py  test_cto_review_bundle_tool.py  test_diagnostic_evidence_schema.py  test_engine_product_separation.py  test_evidence_acceptance_report.py  test_evidence_claim_boundaries.py  test_evidence_ingestion_determinism.py  test_evidence_ingestion_manifest.py  test_evidence_ingestion_rejects_positive_flags.py  test_evidence_ingestion_rejects_raw_files.py  test_evidence_ingestion_schema.py  test_evidence_ingestion_workflow.py  test_evidence_manifest.py  test_evidence_rejection_report.py  test_evidence_rejects_positive_readiness_flags.py  test_ingest_evidence_directory_tool.py  test_no_hidden_unicode_controls.py  (+32 more)
(+204 files in other folders)
